Updated item seeder for tbc

--- a/ClassicGuildBankApi/appsettings.json
+++ b/ClassicGuildBankApi/appsettings.json
@@ -4,9 +4,9 @@
       "Default": "Warning"
     }
   },
-  "ConnectionStrings": {
-    "ClassicGuildBankDb": "Server=.\\SQLEXPRESS;Initial Catalog=ClassicGuildBankDb;Integrated Security=True"
-  },
+    "ConnectionStrings": {
+        "ClassicGuildBankDb": "Server=(localdb)\\MSSQLLocalDB;Initial Catalog=ClassicGuildBankDb;Integrated Security=True"
+    },
   "Patreon": {
     "client_id": "PATREON_CLIENT_ID",
     "client_secret": "PATREON_CLIENT_SECRET",
