--- a/WowheadItemSeeder/Properties/launchSettings.json
+++ b/WowheadItemSeeder/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "WowheadItemSeeder": {
       "commandName": "Project",
-      "commandLineArgs": "--lang ru"
+      "commandLineArgs": "--full"
     }
   }
 }
