--- a/WowheadItemSeeder/appsettings.json
+++ b/WowheadItemSeeder/appsettings.json
@@ -4,8 +4,8 @@
       "Default": "Warning"
     }
   },
-  "ConnectionStrings": {
-    "ClassicGuildBankDb": "Server=./SQLEXPRESS;Initial Catalog=ClassicGuildBankDb;Integrated Security=True"
-  },
+    "ConnectionStrings": {
+        "ClassicGuildBankDb": "Server=(localdb)\\MSSQLLocalDB;Initial Catalog=ClassicGuildBankDb;Integrated Security=True"
+    },
   "AllowedHosts": "*"
 }
