--- a/ClassicGuildBankApi/appsettings.Production.json
+++ b/ClassicGuildBankApi/appsettings.Production.json
@@ -1,13 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "Patreon": {
-    "redirect_uri": "https://classicguildbank.com/#/patreon/callback"
-  },
-  "ApiUrl": "https://classicguildbankapi.azurewebsites.net",
-  "ClientUrl": "https://classicguildbank.com/#",
-  "AllowedHosts": "https://classicguildbank.com"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "Patreon": {
+        "redirect_uri": "https://classicguildbank.com/#/patreon/callback"
+    },
+    "ApiUrl": "https://welcome-supplies-api.azurewebsites.net/api",
+    "ClientUrl": "http://welcome.supplies/#",
+    "AllowedHosts": "http://welcome.supplies"
 }
