--- a/ClassicGuildBankApi/appsettings.json
+++ b/ClassicGuildBankApi/appsettings.json
@@ -22,6 +22,6 @@
   "JwtKey": "SOME_RANDOM_KEY_DO_NOT_SHARE",
   "JwtIssuer": "http://yourdomain.com",
   "JwtExpireDays": 30,
-  "ApiUrl": "https://localhost:44375/api",
+  "ApiUrl": "http://localhost:44375/api",
   "ClientUrl": "http://localhost:4200/#"
 }
