--- a/ClassicGuildBankApi/appsettings.Production.json
+++ b/ClassicGuildBankApi/appsettings.Production.json
@@ -7,7 +7,7 @@
     "Patreon": {
         "redirect_uri": "https://classicguildbank.com/#/patreon/callback"
     },
-    "ApiUrl": "https://welcome-supplies-api.azurewebsites.net/api",
-    "ClientUrl": "http://welcome.supplies/#",
-    "AllowedHosts": "http://welcome.supplies"
+    "ApiUrl": "https://notagb-api.azurewebsites.net/api",
+    "ClientUrl": "https://notagb.com/#",
+    "AllowedHosts": "https://notagb.com"
 }
