--- a/ClassicGuildBankData/ClassicGuildBankData.csproj
+++ b/ClassicGuildBankData/ClassicGuildBankData.csproj
@@ -19,6 +19,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.32" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.32" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.32">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.32" />
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="3.1.32" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="3.1.32" />
