Fixed appsettings and CORS stuff

--- a/ClassicGuildBankApi/appsettings.json
+++ b/ClassicGuildBankApi/appsettings.json
@@ -1,27 +1,33 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
     "ConnectionStrings": {
         "ClassicGuildBankDb": "Server=(localdb)\\MSSQLLocalDB;Initial Catalog=ClassicGuildBankDb;Integrated Security=True"
     },
-  "Patreon": {
-    "client_id": "PATREON_CLIENT_ID",
-    "client_secret": "PATREON_CLIENT_SECRET",
-    "redirect_uri": "http://localhost:4200/patreon/callback",
-    "creator_access": "PATREON_CREATOR_ACCESS_TOKEN",
-    "creator_refresh": "PATREON_CREATOR_REFRESH",
-    "campaign_id": "CGB_CAMPAIGN_ID"
-  },
-  "SendGrid": {
-    "api_key": "SEND_GRID_API_KEY"
-  },
-  "AllowedHosts": "*",
-  "JwtKey": "SOME_RANDOM_KEY_DO_NOT_SHARE",
-  "JwtIssuer": "http://yourdomain.com",
-  "JwtExpireDays": 30,
-  "ApiUrl": "http://localhost:44375/api",
-  "ClientUrl": "http://localhost:4200/#"
+    "Patreon": {
+        "client_id": "PATREON_CLIENT_ID",
+        "client_secret": "PATREON_CLIENT_SECRET",
+        "redirect_uri": "http://localhost:4200/patreon/callback",
+        "creator_access": "PATREON_CREATOR_ACCESS_TOKEN",
+        "creator_refresh": "PATREON_CREATOR_REFRESH",
+        "campaign_id": "CGB_CAMPAIGN_ID"
+    },
+    "SendGrid": {
+        "api_key": "SEND_GRID_API_KEY"
+    },
+    "AllowedHosts": "*",
+    "JwtKey": "SOME_RANDOM_KEY_DO_NOT_SHARE",
+    "JwtIssuer": "http://yourdomain.com",
+    "JwtExpireDays": 30,
+
+    // Develop
+    //"ApiUrl": "http://localhost:44375/api",
+    //"ClientUrl": "http://localhost:4200/#",
+
+    // Production
+    "ApiUrl": "https://notagb-api.azurewebsites.net/api",
+    "ClientUrl": "https://notagb.com/#",
 }
