--- a/classic-guild-bank/src/config/appconfig.prod.json
+++ b/classic-guild-bank/src/config/appconfig.prod.json
@@ -1,6 +1,6 @@
 {
-  "api": "https://welcome-supplies-api.azurewebsites.net/api",
-  "client": "http://welcome.supplies",
+  "api": "https://notagb-api.azurewebsites.net/api",
+  "client": "https://notagb.com",
   "patreon": {
     "oauth_redirect": "https://classicguildbank.com/patreon/callback",
     "client_id": "hmjgYD08W4nvMauZip0okmlof5C1bQWr1CfMCJ_pnccqtZobwBbDme4jSvyekSRh"
