--- a/ClassicGuildBankApi/ClassicGuildBankApi.csproj
+++ b/ClassicGuildBankApi/ClassicGuildBankApi.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <UserSecretsId>8d7b092a-77bf-44f4-8a40-5038cdcf547c</UserSecretsId>
   </PropertyGroup>
 
