--- a/classic-guild-bank/package.json
+++ b/classic-guild-bank/package.json
@@ -26,6 +26,7 @@
     "@webcomponents/custom-elements": "^1.2.4",
     "core-js": "^3.1.4",
     "rxjs": "^6.5.2",
+    "tslib": "^1.14.1",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
