--- a/classic-guild-bank/package.json
+++ b/classic-guild-bank/package.json
@@ -13,21 +13,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "9.1.13",
-    "@angular/common": "9.1.13",
-    "@angular/compiler": "9.1.13",
-    "@angular/core": "9.1.13",
-    "@angular/forms": "9.1.13",
-    "@angular/platform-browser": "9.1.13",
-    "@angular/platform-browser-dynamic": "9.1.13",
-    "@angular/router": "9.1.13",
-    "@clr/angular": "2.0.2",
-    "@clr/icons": "2.0.2",
-    "@clr/ui": "2.0.2",
+    "@angular/common": "^9.1.13",
+    "@angular/compiler": "^9.1.13",
+    "@angular/core": "^9.1.13",
+    "@angular/forms": "^9.1.13",
+    "@angular/platform-browser": "^9.1.13",
+    "@angular/platform-browser-dynamic": "^9.1.13",
+    "@angular/router": "^9.1.13",
+    "@clr/angular": "^3.1.12",
+    "@clr/icons": "^3.1.12",
+    "@clr/ui": "^3.1.12",
     "@webcomponents/custom-elements": "1.2.4",
     "core-js": "3.1.4",
-    "rxjs": "6.6.7",
-    "tslib": "1.14.1",
-    "zone.js": "0.10.3"
+    "rxjs": "^6.6.7",
+    "tslib": "^1.14.1",
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.901.15",
@@ -37,7 +37,7 @@
     "@types/jasmine": "3.3.13",
     "@types/jasminewd2": "2.0.6",
     "@types/node": "12.6.2",
-    "codelyzer": "5.1.0",
+    "codelyzer": "^6.0.0",
     "jasmine-core": "3.4.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "4.1.0",
