--- a/classic-guild-bank/package.json
+++ b/classic-guild-bank/package.json
@@ -31,6 +31,8 @@
     "terser": "^4.8.1",
     "tough-cookie": "^4.1.3",
     "tslib": "^1.14.1",
+    "useragent": "^2.3.0",
+    "xmlhttprequest-ssl": "^1.6.3",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
