--- a/classic-guild-bank/package.json
+++ b/classic-guild-bank/package.json
@@ -24,9 +24,9 @@
     "@clr/icons": "^3.1.12",
     "@clr/ui": "^3.1.12",
     "@webcomponents/custom-elements": "1.2.4",
-    "ansi-html": "^0.0.8",
+    "ansi-html": "0.0.8",
     "core-js": "3.1.4",
-    "minimist": "^1.2.5",
+    "minimist": "^1.2.6",
     "rxjs": "^6.6.7",
     "terser": "^4.8.1",
     "tough-cookie": "^4.1.3",
