--- a/classic-guild-bank/package.json
+++ b/classic-guild-bank/package.json
@@ -12,14 +12,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "9.1.13",
-    "@angular/common": "^9.1.13",
-    "@angular/compiler": "^9.1.13",
-    "@angular/core": "^9.1.13",
-    "@angular/forms": "^9.1.13",
-    "@angular/platform-browser": "^9.1.13",
-    "@angular/platform-browser-dynamic": "^9.1.13",
-    "@angular/router": "^9.1.13",
+    "@angular/animations": "10.2.5",
+    "@angular/common": "^10.2.5",
+    "@angular/compiler": "^10.2.5",
+    "@angular/core": "^10.2.5",
+    "@angular/forms": "^10.2.5",
+    "@angular/platform-browser": "^10.2.5",
+    "@angular/platform-browser-dynamic": "^10.2.5",
+    "@angular/router": "^10.2.5",
     "@clr/angular": "^3.1.12",
     "@clr/icons": "^3.1.12",
     "@clr/ui": "^3.1.12",
@@ -30,30 +30,30 @@
     "rxjs": "^6.6.7",
     "terser": "^4.8.1",
     "tough-cookie": "^4.1.3",
-    "tslib": "^1.14.1",
+    "tslib": "^2.0.0",
     "useragent": "^2.3.0",
     "xmlhttprequest-ssl": "^1.6.3",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.901.15",
-    "@angular/cli": "^9.1.15",
-    "@angular/compiler-cli": "9.1.13",
-    "@angular/language-service": "9.1.13",
+    "@angular-devkit/build-angular": "0.1002.4",
+    "@angular/cli": "^10.2.4",
+    "@angular/compiler-cli": "10.2.5",
+    "@angular/language-service": "10.2.5",
     "@types/jasmine": "3.3.13",
     "@types/jasminewd2": "2.0.6",
     "@types/node": "12.6.2",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "3.4.0",
-    "jasmine-spec-reporter": "4.2.1",
-    "karma": "4.1.0",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-coverage-istanbul-reporter": "2.0.5",
-    "karma-jasmine": "2.0.1",
-    "karma-jasmine-html-reporter": "1.4.2",
-    "protractor": "5.4.2",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
     "ts-node": "8.3.0",
-    "tslint": "5.18.0",
-    "typescript": "3.8.3"
+    "tslint": "~6.1.0",
+    "typescript": "4.0.8"
   }
 }
