--- a/classic-guild-bank/tsconfig.json
+++ b/classic-guild-bank/tsconfig.json
@@ -2,10 +2,10 @@
   "compileOnSave": false,
   "compilerOptions": {
     "paths": {
-        "core-js/es7/reflect": [
-            "node_modules/core-js/proposals/reflect-metadata",
-        ],
-        "core-js/es6/*": ["node_modules/core-js/es"]
+      "core-js/es7/reflect": [
+        "node_modules/core-js/proposals/reflect-metadata"
+      ],
+      "core-js/es6/*": ["node_modules/core-js/es"]
     },
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
